--- a/GradientScalingBox/index.html
+++ b/GradientScalingBox/index.html
@@ -10,23 +10,24 @@
         width: 60%;
         margin: 100px auto;
         height: 500px;
-        -webkit-box-shadow: 2px -2px 106px 33px rgba(168, 72, 168, 1);
-        -moz-box-shadow: 2px -2px 106px 33px rgba(168, 72, 168, 1);
-        box-shadow: 2px -2px 106px 33px rgba(168, 72, 168, 1);
+        -webkit-box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
+          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
+        -moz-box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
+          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
+        box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
+          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
+
         animation: come_out 2s infinite;
       }
 
       @keyframes come_out {
-        0%{
-        transform: scale(1);
-
-        }
-       
-        100%{
-        transform: scale(1.5);
-
+        0% {
+          transform: scale(1);
         }
 
+        100% {
+          transform: scale(1.5);
+        }
       }
     </style>
   </head>
