--- a/GradientScalingBox/index.html
+++ b/GradientScalingBox/index.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gradient Scaling Box</title>
     <style>
+      body {
+        background-color: black;
+      }
       .container {
         background-color: #040404;
         width: 60%;
         margin: 100px auto;
         height: 500px;
-        -webkit-box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
-          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
-        -moz-box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
-          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
-        box-shadow: -1px 6px 48px 24px rgba(250, 0, 208, 1),
-          9px 8px 0px -1px rgba(250, 250, 0, 0.77);
+        border-right: 3px solid yellow;
+        border-bottom: 3px solid yellow;
 
-        animation: come_out 2s infinite;
+        box-shadow: -9px 7px 29px 20px rgba(250, 8, 250, 1);
+
+        animation: come_out 1s infinite;
       }
 
       @keyframes come_out {
         0% {
           transform: scale(1);
+          box-shadow: -9px 7px 29px 20px rgba(250, 8, 250, 1);
+           border-right: 3px solid yellow;
+        border-bottom: 3px solid yellow;
         }
-
+        
         100% {
           transform: scale(1.5);
+          box-shadow: -9px 7px 29px 20px rgba(250, 8, 250, 0);
+           border-right: none;
+        border-bottom: none;
+
         }
       }
     </style>
