--- a/paybills/index.html
+++ b/paybills/index.html
@@ -28,6 +28,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            animation: rotate_circle 5s ease-in-out infinite;
         }
         .icons {
             padding: 5px;
@@ -52,9 +53,9 @@
         .icon8 { top: 15%; left: 15%; transform: translate(-50%, -50%); }
 
         .inner1 {
-            animation: headingg 2s infinite ease-in-out;
+            animation: heading 2s infinite ease-in-out;
         }
-        @keyframes headingg {
+        @keyframes heading {
             0% {
                 transform: translateX(0);
                 color: white;
@@ -63,6 +64,15 @@
                 transform: translateX(150%);
                 color: black;
             }
+        }
+        @keyframes rotate_circle {
+            0%{
+                transform: rotate(0deg);
+            }
+            100%{
+                transform: rotate(360deg);
+            }
+            
         }
     </style>
 </head>
